...
  <string name="add_profile_create_btn">Create</string>
  <string name="add_profile_close">Close</string>
  <string name="add_profile_pin_info">With a PIN, nobody else can access a profile besides this assigned user.</string>
  <string name="add_profile_error_image_failed_store">We failed to store your avatar image. Please try again.</string>
  <string name="add_profile_error_name_not_unique">This name is already in use by another profile.</string>
  <string name="add_profile_error_name_empty">Please enter a valid name for this profile.</string>
  <string name="add_profile_error_name_only_letters">Please choose a profile name that doesn\'t include numbers or symbols.</string>
  <string name="add_profile_error_missing_profile_type">Profile type unknown.</string>
  <string name="add_profile_default_error_message">An error occurred while creating a profile.</string>
  <string name="add_profile_error_pin_length">Your PIN should be 3 digits long.</string>
  <string name="add_profile_error_pin_confirm_wrong">Please make sure that both PINs match.</string>
  <string name="add_profile_info_content_description">More information on 3-digit PINs.</string>
  <string name="current_profile_picture_content_description">Current profile picture</string>
...
  <string name="onboarding_profile_type_activity_parent_text">I\'m the parent, teacher, or guardian of a student.</string>
  <string name="onboarding_step_count_two">STEP 2 OF 5</string>

  <!-- Onboarding Create New Profile Activity -->
  <string name="create_profile_activity_title">Create Profile</string>
  <string name="create_profile_activity_header">What should we call you?</string>
  <string name="create_profile_activity_nickname_label">Nickname</string>
  <string name="create_profile_activity_profile_picture_prompt">Tap here to add a picture</string>
  <string name="create_profile_activity_nickname_error">Click in the box above to type your nickname.</string>
  <string name="create_profile_activity_edit_icon_content_description">Edit profile picture</string>
  <string name="create_profile_activity_current_picture_content_description">Current profile picture</string>
  <string name="onboarding_step_count_three">STEP 3 OF 5</string>

  <!-- Onboarding Learner Intro Activity -->
  <string name="onboarding_learner_intro_activity_title">Welcome</string>
  <string name="onboarding_learner_intro_activity_text">Welcome, %s!</string>
  <string name="onboarding_learner_intro_classroom_text">Learn Math through fun, story-based lessons.</string>
  <string name="onboarding_learner_intro_practice_text">Try practice questions to test your knowledge.</string>
...
  <string name="onboarding_step_count_four">STEP 4 OF 5</string>

  <!-- Onboarding Shared Strings -->
  <string name="onboarding_otter_content_description">Cute otter wearing glasses.</string>
  <string name="onboarding_learner_otter_content_description">Cute otter with books.</string>
  <string name="onboarding_parent_otter_content_description">Mama and baby otter.</string>
  <string name="onboarding_navigation_back">Back</string>
  <string name="onboarding_navigation_continue">Continue</string>

  <!-- Onboarding Audio Language Fragment -->
  <string name="audio_language_fragment_text">In %s, you can listen to lessons!</string>
  <string name="audio_language_fragment_subtitle">Select the audio language to listen to lessons</string>
  <string name="onboarding_step_count_five">STEP 5 OF 5</string>
</resources>
...
